Add Lucene indexing to local knowledge scans